# static_map

./: CMakeLists.txt
src/: static_map.c  static_map.h
test/: test_static_map.c
